fix styling on mobile

--- a/src/components/Swiper/styles.scss
+++ b/src/components/Swiper/styles.scss
@@ -116,12 +116,14 @@
     position: absolute;
     animation-name: slide-out3;
     animation-duration: 0.5s;
+    border-radius: 10px;
 }
 
 #slide4 {
     position: absolute;
     transform: translateX(-100%);
     -webkit-transform: translateX(-100%);
+    border-radius: 10px;
 }
 
 .slide-in3 {
@@ -263,7 +265,6 @@
 }
 
 @media only screen and (max-width: 414px) {
-    
     .swiperContentImageWrapper {
         width: 22rem;
         height: 22rem;
@@ -282,11 +283,20 @@
         width: 22rem;
         height: 22rem;
     }
+
+    .slide-in3 {
+        width: 22rem;
+        height: 22rem;
+    }
+
+    .slide-out3 {
+        width: 22rem;
+        height: 22rem;
+    }
 }
 
 
 @media only screen and (max-width: 400px) {
-    
     .swiperContentImageWrapper {
         width: 20rem;
         height: 20rem;
@@ -298,13 +308,22 @@
     }
 
     .slide-out {
+        width: 20rem;
+        height: 20rem;
+    }
+
+    .slide-in3 {
+        width: 20rem;
+        height: 20rem;
+    }
+
+    .slide-out3 {
         width: 20rem;
         height: 20rem;
     }
 }
 
 @media only screen and (max-width: 320px) {
-    
     .swiperContentImageWrapper {
         width: 18rem;
         height: 18rem;
@@ -316,13 +335,22 @@
     }
 
     .slide-out {
+        width: 18rem;
+        height: 18rem;
+    }
+
+    .slide-in3 {
+        width: 18rem;
+        height: 18rem;
+    }
+
+    .slide-out3 {
         width: 18rem;
         height: 18rem;
     }
 }
 
 @media only screen and (max-width: 280px) {
-    
     .swiperContentImageWrapper {
         width: 15rem;
         height: 15rem;
@@ -334,6 +362,16 @@
     }
 
     .slide-out {
+        width: 15rem;
+        height: 15rem;
+    }
+
+    .slide-in3 {
+        width: 15rem;
+        height: 15rem;
+    }
+
+    .slide-out3 {
         width: 15rem;
         height: 15rem;
     }
